--- a/index.html
+++ b/index.html
@@ -1,168 +1,85 @@
-<!DOCTYPE HTML>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Andrej  Jovanovic</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/codefavicon.ico">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+---
+layout: default
+title: Home
+---
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<!-- Banner -->
+<section id="banner">
+	<div class="inner">
+		<div class="logo"><span class="icon  fa-connectdevelop"></span></div>
+		<h2>Andrej Jovanović</h2>
+		<p>3<sup>rd</sup> Year Artificial Intelligence & Computer Science Student.</a></p>
+	</div>
+</section>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Andrej Jovanovic</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+<!-- Wrapper -->
+<section id="wrapper">
 
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
-					</nav>
-
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<div class="logo"><span class="icon  fa-connectdevelop"></span></div>
-							<h2>Andrej Jovanovic</h2>
-							<p>3<sup>rd</sup> Year Artificial Intelligence & Computer Science Student.</a></p>
-						</div>
-					</section>
-
-				<!-- Wrapper -->
-					<section id="wrapper">
-
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">About me</h2>
-										<p>I am a third-year artificial intelligence and computer science student at the University of Edinburgh. I am an analytical, curious and dedicated worker who is ready to integrate his optimistic and positive outlook into any team. I have a keen interest in how data analysis can be used to solve pressing global issues. I am looking to gain practical experience in the dynamic and expanding field of computer science to compliment my current knowledge and to extend my capabilities as a professional.</p>
-										<a href="https://www.linkedin.com/in/andrej-jovanovi%C4%87/" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Projects</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="https://github.com/maddox-j" class="special">View my projects on GitHub</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/tutoring.png" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Tutoring Services</h2>
-										<p>Alongside my studies, I also provide private mathematics tutoring to students via Zoom. I have been tutoring for three years, teaching both HL IB Mathematics and IEB Mathematics (South Africa). If you are interested in this, please email be to find out more details.</p>
-										<a href="mailto: andrej@jovanovic.co.za" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Curriculum Vitae</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="https://github.com/maddox-j" class="special">View my projects on GitHub</a>
-									</div>
-								</div>
-							</section>
-				
-
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Blog Posts</h2>
-									<p>From time to time, I enjoy sharing my views. I will not pretend that I am a good author, but it seems like a fun creative outlet. Please feel free to browse through my musings below.</p>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
-								</div>
-							</section>
-
-					</section>
-
-				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Please do not hestitate to get in touch with me if you have any questions regarding my projects, or if you would like to connect professionally.</p>
-							<ul class="contact">
-								<li class="icon solid fa-envelope"><a href="mailto: andrej@jovanovic.co.za">andrej@jovanovic.co.za</a></li>
-								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/andrej-jovanovi%C4%87/">https://www.linkedin.com/in/andrej-jovanovic</a></li>
-								<li class="icon brands fa-github-alt"><a href="https://github.com/maddox-j">https://github.com/maddox-j</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; maddox-j. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Mofidifed by: Andrej Jovanovic</li>
-							</ul>
-						</div>
-					</section>
-
+	<!-- One -->
+		<section id="one" class="wrapper spotlight style1">
+			<div class="inner">
+				<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+				<div class="content">
+					<h2 class="major">About me</h2>
+					<p>I am a third-year artificial intelligence and computer science student at the University of Edinburgh. I am an analytical, curious and dedicated worker who is ready to integrate his optimistic and positive outlook into any team. I have a keen interest in how data analysis can be used to solve pressing global issues. I am looking to gain practical experience in the dynamic and expanding field of computer science to compliment my current knowledge and to extend my capabilities as a professional.</p>
+					<a href="https://www.linkedin.com/in/andrej-jovanovi%C4%87/" class="special">Learn more</a>
+				</div>
 			</div>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Two -->
+		<section id="two" class="wrapper alt spotlight style2">
+			<div class="inner">
+				<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+				<div class="content">
+					<h2 class="major">Projects</h2>
+					<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+					<a href="https://github.com/maddox-j" class="special">View my projects on GitHub</a>
+				</div>
+			</div>
+		</section>
 
-	</body>
-</html>
+	<!-- Three -->
+		<section id="three" class="wrapper spotlight style3">
+			<div class="inner">
+				<a href="#" class="image"><img src="images/tutoring.png" alt="" /></a>
+				<div class="content">
+					<h2 class="major">Tutoring Services</h2>
+					<p>Alongside my studies, I also provide private mathematics tutoring to students via Zoom. I have been tutoring for three years, teaching both HL IB Mathematics and IEB Mathematics (South Africa). If you are interested in this, please email be to find out more details.</p>
+					<a href="mailto: andrej@jovanovic.co.za" class="special">Learn more</a>
+				</div>
+			</div>
+		</section>
+
+		<section id="two" class="wrapper alt spotlight style2">
+			<div class="inner">
+				<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+				<div class="content">
+					<h2 class="major">Curriculum Vitae</h2>
+					<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+					<a href="https://github.com/maddox-j" class="special">View my projects on GitHub</a>
+				</div>
+			</div>
+		</section>
+
+
+	<!-- Four -->
+		<section id="four" class="wrapper alt style1">
+			<div class="inner">
+				<h2 class="major">Blog Posts</h2>
+				<p>From time to time, I enjoy sharing my views. I will not pretend that I am a good author, but it seems like a fun creative outlet. Please feel free to browse through my musings below.</p>
+				<section class="features">
+					{% for post in site.posts %}
+					<article>
+						<a href="{{post.url}}" class="image"><img src={{post.image}} alt="" /></a>
+						<h3 class="major">{{post.title}}</h3>
+						<p>{{post.description}}</p>
+					</article>
+					{% endfor %}
+				</section>
+				<ul class="actions">
+					<li><a href="blogposts.html" class="button">Browse All</a></li>
+				</ul>
+			</div>
+		</section>
+</section>
