--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <!-- Banner -->
 <section id="banner">
 	<div class="inner">
-		<div class="logo"><span class="icon  fa-connectdevelop"></span></div>
+		<div class="logo"><span class="icon brands fa-connectdevelop"></span></div>
 		<h2>Andrej Jovanović</h2>
 		<p>3<sup>rd</sup> Year Artificial Intelligence & Computer Science Student.</a></p>
 	</div>
