--- a/blogposts.html
+++ b/blogposts.html
@@ -10,7 +10,7 @@ title: Blog Posts
 <!-- Banner -->
 <section id="banner">
 	<div class="inner">
-		<div class="logo"><span class="icon  fa-connectdevelop"></span></div>
+		<div class="logo"><span class="icon brands fa-connectdevelop"></span></div>
 		<h2>Blog Posts</h2>
 		<p>View My Posts.</p>
 	</div>
