--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ title: Home
 				<h2 class="major">Blog Posts</h2>
 				<p>From time to time, I enjoy sharing my views. I will not pretend that I am a good author, but it seems like a fun creative outlet. Please feel free to browse through my musings below.</p>
 				<section class="features">
-					{% for post in site.posts %}
+					{% for post in site.posts limit:6 %}
 					<article>
 						<a href="{{post.url}}" class="image"><img src={{post.image}} alt="" /></a>
 						<h3 class="major">{{post.title}}</h3>
