Fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ displayed the signal on the display according to the volume intensity.</p>
 				<a href="#" class="image"><img src="images/tutoring.png" alt="" /></a>
 				<div class="content">
 					<h2 class="major">Tutoring Services</h2>
-					<p>Alongside my studies, I also provide private mathematics tutoring to students via Zoom. I have been tutoring for three years, teaching both HL IB Mathematics and IEB Mathematics (South Africa). If you are interested in this, please email be to find out more details.</p>
+					<p>Alongside my studies, I also provide private mathematics tutoring to students via Zoom. I have been tutoring for three years, teaching both HL IB Mathematics and IEB Mathematics (South Africa). If you are interested in this, please email me to find out more details.</p>
 					<a href="mailto: andrej@jovanovic.co.za" class="special">Learn more</a>
 				</div>
 			</div>
