Changed year of study.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
 	<div class="inner">
 		<div class="logo"><span class="icon brands fa-connectdevelop"></span></div>
 		<h2>Andrej Jovanović</h2>
-		<p>3<sup>rd</sup> Year Artificial Intelligence & Computer Science Student.</p>
+		<p>4<sup>th</sup> Year Artificial Intelligence & Computer Science Student.</p>
 	</div>
 </section>
 
