Changed year of study.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Home
 				<a href="#" class="image"><img src="images/pengu.jpg" alt="" /></a>
 				<div class="content">
 					<h2 class="major">About me</h2>
-					<p>I am a third-year artificial intelligence and computer science student at the University of Edinburgh. I am an analytical, curious and dedicated worker who is ready to integrate his optimistic outlook into any team. I have an interest in how data analysis can be used to solve pressing global issues. I am looking to gain practical experience in the dynamic and expanding field of computer science to compliment my current knowledge and to extend my capabilities as a professional.</p>
+					<p>I am a fourth-year artificial intelligence and computer science student at the University of Edinburgh. I am an analytical, curious and dedicated worker who is ready to integrate his optimistic outlook into any team. I have an interest in how data analysis can be used to solve pressing global issues. I am looking to gain practical experience in the dynamic and expanding field of computer science to compliment my current knowledge and to extend my capabilities as a professional.</p>
 					<a href="https://www.linkedin.com/in/andrej-jovanovi%C4%87/" class="special">Learn more</a>
 				</div>
 			</div>
