--- a/index.html
+++ b/index.html
@@ -34,13 +34,20 @@ title: Home
 				<div class="content">
 					<h2 class="major">Projects</h2>
 						<ul>
-						<li><h3>Reverse Recycling Machine - RecylEd</h3></li>
+						<li><h3>RecyclEd - Python</h3></li>
+							<p> 
+								RecyclEd is a reverse recycling machine that takes recyclable items from users and classifies them according to their object category (plastic bottle, glass bottle, metal can, or rubbish). Object classification is performed using a residual neural network. If the object is classified as recycling, the system will move the object into the appropriate bin. Based on the items accepted, the user will be entitled to monetary compensation, given through a coupon to the user.
+								<br><br>
+								<a href="2022/01/10/second.html">Find out more in the blog post!</a>
+
+							</p>
 						<li><h3>Drone Food Delivery Service - Java</h3>
 							<p>
-								The task of this project was to plan the route that a drone will take to deliver food and drink orders on a given day. There were a number of limitations to this:<br>
-								1) The drone had a limited number of moves before it ran out of battery. <br>
-								2) The drone could not fly over certain predefined buildings (no-fly zone(s)).<br>
-								To find the shortest route, I implemented a nearest neighbour heuristic between adjacent orders based on the straight-line distances between two potential start and destination nodes. Once this was obtained, I found potential rerouting nodes, the vertices of the bounding box for each no-fly zone, so as to avoid the obstacles. However, another limitation is the drone could only fly on a bearing that was a multiple of ten between zero and three hundred and fifty degrees. To ensure that the no-fly zones were never touched, a implemented an algorithm to apply local corrections to the current path whilst ensuring the smallest deviation from the target.
+								In this day and age, many people, including students, have their food delivered on a regular location. Wouldn't it be nifty if we could create a drone that would deliver meals to precise coordinate locations?
+								<br><br>
+								This task of this project was to devise an algorithm that would act as a route finder: it would plan the route that the drone would take to deliver the food orders on a given day.
+								<br><br>
+								<a href="2022/01/10/second.html">Find out more in the blog post!</a>
 							</p>
 						</li>
 						<li><h3>The Effect of COVID-19 on the Usage of 'Just Eats Cycles' - Python</h3>
