--- a/index.html
+++ b/index.html
@@ -34,18 +34,19 @@ title: Home
 				<div class="content">
 					<h2 class="major">Projects</h2>
 						<ul>
-						<li><h3>RecyclEd - Python</h3></li>
+						<li><h3>RecyclEd - Python</h3>
 							<p> 
 								RecyclEd is a reverse recycling machine that takes recyclable items from users and classifies them according to their object category (plastic bottle, glass bottle, metal can, or rubbish). Object classification is performed using a residual neural network. If the object is classified as recycling, the system will move the object into the appropriate bin. Based on the items accepted, the user will be entitled to monetary compensation, given through a coupon to the user.
 								<br><br>
 								<a href="2022/01/10/second.html">Find out more in the blog post!</a>
 
 							</p>
+						</li>
 						<li><h3>Drone Food Delivery Service - Java</h3>
 							<p>
-								In this day and age, many people, including students, have their food delivered on a regular location. Wouldn't it be nifty if we could create a drone that would deliver meals to precise coordinate locations?
+								In this day and age, many people, including students, have their food delivered. Wouldn't it be nifty if we could create a drone that would deliver meals to precise coordinate locations?
 								<br><br>
-								This task of this project was to devise an algorithm that would act as a route finder: it would plan the route that the drone would take to deliver the food orders on a given day.
+								This task of this project was to devise an algorithm that would act as cost-constrained path finder: it would plan the route that the drone would take to deliver the food orders on a given day, maximing the daily profit.
 								<br><br>
 								<a href="2022/01/10/second.html">Find out more in the blog post!</a>
 							</p>
