Added menu bar to website and oher changes.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Home
 	<!-- One -->
 		<section id="one" class="wrapper spotlight style1">
 			<div class="inner">
-				<a href="#" class="image"><img src="images/pengu.jpg" alt="" /></a>
+				<a class="image"><img src="images/pengu.jpg" alt="" /></a>
 				<div class="content">
 					<h2 class="major">About me</h2>
 					<p>I am a fourth-year artificial intelligence and computer science student at the University of Edinburgh. I am an analytical, curious and dedicated worker who is ready to integrate his optimistic outlook into any team. I have an interest in how data analysis can be used to solve pressing global issues. I am looking to gain practical experience in the dynamic and expanding field of computer science to compliment my current knowledge and to extend my capabilities as a professional.</p>
@@ -30,7 +30,7 @@ title: Home
 	<!-- Two -->
 		<section id="two" class="wrapper alt spotlight style2">
 			<div class="inner">
-				<a href="#" class="image"><img src="images/projects.png" alt="" /></a>
+				<a class="image"><img src="images/projects.png" alt="" /></a>
 				<div class="content">
 					<h2 class="major">Projects</h2>
 						<ul>
@@ -70,7 +70,7 @@ displayed the signal on the display according to the volume intensity.</p>
 	<!-- Three -->
 		<section id="three" class="wrapper spotlight style3">
 			<div class="inner">
-				<a href="#" class="image"><img src="images/tutoring.png" alt="" /></a>
+				<a class="image"><img src="images/tutoring.png" alt="" /></a>
 				<div class="content">
 					<h2 class="major">Tutoring Services</h2>
 					<p>Alongside my studies, I also provide private mathematics tutoring to students via Zoom. I have been tutoring for three years, teaching both HL IB Mathematics and IEB Mathematics (South Africa). If you are interested in this, please email me to find out more details.</p>
