--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: Home
 							<p> 
 								RecyclEd is a reverse recycling machine that takes recyclable items from users and classifies them according to their object category (plastic bottle, glass bottle, metal can, or rubbish). Object classification is performed using a residual neural network. If the object is classified as recycling, the system will move the object into the appropriate bin. Based on the items accepted, the user will be entitled to monetary compensation, given through a coupon to the user.
 								<br><br>
-								<a href="2022/07/01/recycled.html">Find out more in the blog post <em>(coming soon!)</em></a>
+								<a href="2022/07/01/recycled.html">Find out more in the blog post!</a>
 
 							</p>
 						</li>
