--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ displayed the signal on the display according to the volume intensity.</p>
 				<div class="content">
 					<h2 class="major">Tutoring Services</h2>
 					<p>Alongside my studies, I also provide private mathematics tutoring to students via Zoom. I have been tutoring for three years, teaching both HL IB Mathematics and IEB Mathematics (South Africa). If you are interested in this, please email me to find out more details.</p>
-					<a href="mailto:tbc" class="special">Learn more</a>
+					<a href="mailto:contact.me.maddox@gmail.com" class="special">Learn more</a>
 				</div>
 			</div>
 		</section>
